[package]
name = "neetcode_rust"
version = "0.1.0"
edition = "2024"
authors = ["Htet Htut <htet.htut24@gmail.com>"]
description = "My solutions to the NeetCode problems in Rust."

[dependencies]
# Common serialization/deserialization framework
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Asynchronous runtime
tokio = { version = "1.0", features = ["full"] }

# Logging and error handling utils
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"

[dev-dependencies]
# Dependencies used strictly for testing/benchmarking
criterion = "0.5"